Resize MD downloads danger icon per design changes.

Bug: 767149
Change-Id: I3f109ea28f221ae6f800fcee23bd2744c923705e
Reviewed-on: https://chromium-review.googlesource.com/719998
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Sidney San Martín <sdy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#509053}
Former-commit-id: 3f13d8f08d0ad3ec2144cef681636ca5ef10a009